--- a/index.html
+++ b/index.html
@@ -8,6 +8,42 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    
+    <section class="w-full h-[50px] bg-[#1F2C30] hidden lg:flex justify-between px-[25px]">
+        <ul class="h-full min-w-[100px] text-white flex items-center">
+            <li>
+                <i class="bi bi-telephone-fill"></i>
+                <a href="" class="duration-500 hover:text-[#39B8AD]">0097785788463</a>
+            </li>
+            <li class="flex px-[15px] mx-[10px] h-full items-center border-l-2 border-r-2  border-[#1b817993] font-[var(--Outfit)]">
+                <i class="bi bi-geo-alt-fill"></i>
+                <p>Kabul_Afghanistan_Khair khana</p>
+            </li>
+            <li>
+                <i class="bi bi-clock"></i>
+                <span>Mon - Sat: 8:00 - 15:00</span>
+            </li>
+        </ul>
+        <div class="h-full min-w-[100px] text-white flex items-center gap-[8px]">
+            <i class="bi bi-person-circle"></i>
+            <a href="" class="font-bold duration-500 hover:text-[#39B8AD]">Login</a>
+            <span>/</span>
+            <a href="" class="font-bold duration-500 hover:text-[#39B8AD]">regester</a>
+        </div>
+    </section>
+
+
+    <!-- ==============HEADER_______  -->
+     <header class="w-full font-[var(--Outfil)]">
+        <section class="w-full bg-amber-300 h-[90px] lg:hidden flex items-center justify-between px-[20px]">
+            <figure>
+                <a href=""><img src="src/img/logo-black.png" class="w-[130px]" alt=""></a>
+            </figure>
+            <span id="toggle" class="text-[30px] cursor-pointer text-[#1f2c30]"><i class="bi bi-list"></i></span>
+            <nav id="navBarMenu" class="w-[80%] h-[100vh] bg-[red] fixed top-0 right-[-80%] duration-1000"></nav>
+        </section>
+        <section class="w-full bg-[purple] h-[150px] hidden lg:flex">LG</section>
+     </header>
+    <!-- ======END========HEADER_______  -->
 </body>
+<script src="src/index.js"></script>
 </html>
